<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/post_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/post_votes"
        tools:text="642"
        tools:textColor="@color/colorAccent"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post_category"
            tools:text="r/mildlyinteresting"
            android:textAppearance="@style/VerySmallText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/post_image"
            android:contentDescription="@string/post_image_content_description"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/post_category"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/constraintLayout"
        android:id="@+id/constraintLayout2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/post_votes"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post_share"
            tools:text="Share"
            android:textAppearance="@style/VerySmallText"
            app:layout_constraintTop_toBottomOf="@+id/post_title"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/post_hide"
            android:layout_marginTop="8dp"
            android:text="@string/btn_share" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post_hide"
            android:textAppearance="@style/VerySmallText"
            tools:text="Hide"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/post_save"
            app:layout_constraintTop_toBottomOf="@+id/post_title"
            android:layout_marginTop="8dp"
            android:text="@string/btn_hide" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post_save"
            tools:text="Save"
            android:textAppearance="@style/VerySmallText"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/post_comments"
            app:layout_constraintTop_toBottomOf="@+id/post_title"
            android:layout_marginTop="8dp"
            android:text="@string/btn_save" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post_comments"
            tools:text="647 comments"
            android:textAppearance="@style/VerySmallText"
            app:layout_constraintLeft_toLeftOf="@+id/post_title"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/post_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post_title"
            tools:text="This corn plane at the airport"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp" />
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_expand_less_black_24dp"
        android:id="@+id/post_vote_up"
        android:contentDescription="@string/btn_vote_up_description"
        app:layout_constraintLeft_toLeftOf="@+id/post_votes"
        app:layout_constraintRight_toRightOf="@+id/post_votes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/post_votes"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_expand_more_black_24dp"
        android:id="@+id/post_vote_down"
        app:layout_constraintLeft_toLeftOf="@+id/post_votes"
        app:layout_constraintRight_toRightOf="@+id/post_votes"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/post_votes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/btn_vote_down_description" />

</android.support.constraint.ConstraintLayout>